# LLMc

./: .gitignore  .gitmodules  LICENSE  README.md  pyproject.toml
llmc/: decoder.py  encoder.py  executor.py
llmc/entrypoint/: cli.py  compress.py  decompress.py  server.py
tests/: test_roundtrip.py  test_server.py
web/: app.js  index.html  style.css
